# bdtools

./: .gitignore  README.md  dtype.py  environment.yml  environment_tf-gpu.yml  environment_tf-nogpu.yml  nan.py  requirements.txt  setup.cfg  setup.py
bdtools/: __init__.py  augment.py  augment_old.py  check.py  check1.py  comp.py  conn.py  dtype.py  edm.py  edm_backup.py  edt.py  flow.py  imfilt.py  klt.py  mask.py  nan.py  nan1.py  nan2.py  nan3.py  nan_old_3D.py  norm.py  patch.py  patch_backup.py  patch_old.py  piv.py  piv_v2.py  preprocess.py  randarr.py  reg.py  reg1.py  skel.py
bdtools_new/: edt.py  edt_test.py
bdtools_old/: mask.py
bdtools_old_old/: annotate.py  check.py  conn.py  norm.py
data/: filt.tif  img_16bits.tif  mask.tif  mask_3d.tif  mask_3d_512(crop).tif  mask_512(crop).tif  noise+nan_256.tif  noise_3d_256_filt1.tif  noise_3d_512(crop).tif  noisy-nan_3d.tif  noisy.tif  noisy_3d.tif  skeleton_noBorder.tif
dtype/: dtype.py  ranged_conv.py
index/: idx.py
nan/: filt.py  nan.py  nanfilt.py  nanreplace.py  replace.py
scripts/: BADGES.md  dynamic_badges.py  update_readme.py
skel/: conn.py  labconn.py  pixconn.py
test_cython/: imfilt.c  imfilt.html  imfilt.pyx  main.py  nprime.pyx  setup.py
test_numba/: main.py
tests/: flow_test.py  mask_test(inactivated).py  mask_test.py  nan_expected.py  nan_test(inactivated).py  nan_test.py  nan_tests.py  norm_test(inactivated).py  norm_test.py  patch_test(inactivated).py  patch_test.py  path_test(ongoing).py  skel_expected.py  skel_test.py  test_nan.py  test_nan_backup.py
utils/: config.ini  (+5 more)
(+172 files in other folders)
