[metadata]
name = bdtools
version = 0.1
author = Benoit Dehapiot
author_email = b.dehapiot@gmail.com
description = Collection of tools for recurring tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BDehapiot/bdtools
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
exclude = tests*
python_requires = >=3.9
install_requires =
    numpy
    scipy
    scikit-image
    matplotlib
    joblib
    numba